--- a/source/Components/AvalonDock.Themes.Aero/Theme.xaml
+++ b/source/Components/AvalonDock.Themes.Aero/Theme.xaml
@@ -481,15 +481,27 @@
 
 	<ControlTemplate x:Key="AvalonDock_ThemeAero_AnchorGroupTemplate" TargetType="{x:Type avalonDockControls:LayoutAnchorGroupControl}">
 		<ItemsControl ItemsSource="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Children}">
-			<ItemsControl.LayoutTransform>
-				<RotateTransform Angle="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Model.Parent.Side, Converter={avalonDockConverters:AnchorSideToAngleConverter}}" />
-			</ItemsControl.LayoutTransform>
-			<ItemsControl.ItemsPanel>
-				<ItemsPanelTemplate>
-					<StackPanel Orientation="Horizontal" />
-				</ItemsPanelTemplate>
-			</ItemsControl.ItemsPanel>
-		</ItemsControl>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.Style>
+                <Style TargetType="{x:Type ItemsControl}">
+                    <Style.Resources>
+                        <RotateTransform x:Key="LeftRightAnchorSideRotateTransform" Angle="90" />
+                    </Style.Resources>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Path=Model.Parent.Side, RelativeSource={RelativeSource TemplatedParent}}" Value="Left">
+                            <Setter Property="LayoutTransform" Value="{StaticResource LeftRightAnchorSideRotateTransform}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Path=Model.Parent.Side, RelativeSource={RelativeSource TemplatedParent}}" Value="Right">
+                            <Setter Property="LayoutTransform" Value="{StaticResource LeftRightAnchorSideRotateTransform}" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ItemsControl.Style>
+        </ItemsControl>
 	</ControlTemplate>
 
 	<ControlTemplate x:Key="AvalonDock_ThemeAero_AnchorTemplate" TargetType="{x:Type avalonDockControls:LayoutAnchorControl}">
@@ -1502,6 +1514,7 @@
 		<Setter Property="Padding" Value="5,0,5,0" />
 		<Setter Property="VerticalContentAlignment" Value="Center" />
 		<Setter Property="Cursor" Value="Hand" />
+		<Setter Property="AutomationProperties.Name" Value="{Binding LayoutElement.Title}" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="ListBoxItem">
@@ -1645,6 +1658,7 @@
 												Text="{x:Static avalonDockProperties:Resources.Active_ToolWindows}" />
 											<ListBox
 												x:Name="PART_AnchorableListBox"
+												AutomationProperties.Name="{x:Static avalonDockProperties:Resources.Active_ToolWindows}"
 												Grid.Row="1"
 												MaxHeight="400"
 												Background="Transparent"
@@ -1681,6 +1695,7 @@
 												Text="{x:Static avalonDockProperties:Resources.Active_Files}" />
 											<ListBox
 												x:Name="PART_DocumentListBox"
+												AutomationProperties.Name="{x:Static avalonDockProperties:Resources.Active_Files}"
 												Grid.Row="1"
 												MaxHeight="400"
 												Background="Transparent"
