--- a/source/Components/AvalonDock/Themes/generic.xaml
+++ b/source/Components/AvalonDock/Themes/generic.xaml
@@ -376,6 +376,8 @@
 		</Setter>
 	</Style>
 
+	<Style TargetType="{x:Type avalonDockControls:AnchorablePaneTitle}" BasedOn="{StaticResource AnchorablePaneTitleStyle}"/>
+	
 	<ControlTemplate x:Key="AnchorSideTemplate" TargetType="{x:Type avalonDockControls:LayoutAnchorSideControl}">
 		<ItemsControl Background="{TemplateBinding Background}" ItemsSource="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Children}">
 			<ItemsControl.ItemsPanel>
@@ -388,14 +390,26 @@
 
 	<ControlTemplate x:Key="AnchorGroupTemplate" TargetType="{x:Type avalonDockControls:LayoutAnchorGroupControl}">
 		<ItemsControl ItemsSource="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Children}">
-			<ItemsControl.LayoutTransform>
-				<RotateTransform Angle="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Model.Parent.Side, Converter={avalonDockConverters:AnchorSideToAngleConverter}}" />
-			</ItemsControl.LayoutTransform>
 			<ItemsControl.ItemsPanel>
 				<ItemsPanelTemplate>
 					<StackPanel Orientation="Horizontal" />
 				</ItemsPanelTemplate>
 			</ItemsControl.ItemsPanel>
+			<ItemsControl.Style>
+				<Style TargetType="{x:Type ItemsControl}">
+					<Style.Resources>
+						<RotateTransform x:Key="LeftRightAnchorSideRotateTransform" Angle="90" />
+					</Style.Resources>
+					<Style.Triggers>
+						<DataTrigger Binding="{Binding Path=Model.Parent.Side, RelativeSource={RelativeSource TemplatedParent}}" Value="Left">
+							<Setter Property="LayoutTransform" Value="{StaticResource LeftRightAnchorSideRotateTransform}" />
+						</DataTrigger>
+						<DataTrigger Binding="{Binding Path=Model.Parent.Side, RelativeSource={RelativeSource TemplatedParent}}" Value="Right">
+							<Setter Property="LayoutTransform" Value="{StaticResource LeftRightAnchorSideRotateTransform}" />
+						</DataTrigger>
+					</Style.Triggers>
+				</Style>
+			</ItemsControl.Style>
 		</ItemsControl>
 	</ControlTemplate>
 
@@ -744,9 +758,7 @@
 						BorderBrush="{TemplateBinding BorderBrush}"
 						BorderThickness="{TemplateBinding BorderThickness}">
 						<ContentPresenter
-							Content="{Binding LayoutItem.View, RelativeSource={RelativeSource TemplatedParent}}"
-							ContentTemplate="{Binding LayoutItem.View.ContentTemplate, RelativeSource={RelativeSource TemplatedParent}}"
-							ContentTemplateSelector="{Binding LayoutItem.View.ContentTemplateSelector, RelativeSource={RelativeSource TemplatedParent}}" />
+							Content="{Binding LayoutItem.View, RelativeSource={RelativeSource TemplatedParent}}" />
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
@@ -1203,6 +1215,7 @@
 											Text="{x:Static avalonDockProperties:Resources.Active_ToolWindows}" />
 										<ListBox
 											x:Name="PART_AnchorableListBox"
+											AutomationProperties.Name="{x:Static avalonDockProperties:Resources.Active_ToolWindows}"
 											Grid.Row="1"
 											MaxHeight="400"
 											Background="Transparent"
@@ -1250,6 +1263,7 @@
 											Text="{x:Static avalonDockProperties:Resources.Active_Files}" />
 										<ListBox
 											x:Name="PART_DocumentListBox"
+											AutomationProperties.Name="{x:Static avalonDockProperties:Resources.Active_Files}"
 											Grid.Row="1"
 											MaxHeight="400"
 											Background="Transparent"
